# cmake-test

./: CMakeLists.txt  README.md  foo.cpp  main.cpp
